--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+          cache: 'pip'
       
       - name: Install pip
         run: |
@@ -23,7 +24,7 @@ jobs:
       
       - name: Install dependencies with pip
         run: |
-          pip install -r requirements.txt
+          pip install web3==6.0.0
       
       - name: Wrap weth to eth
         env:
