--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
             ADDRESS: ${{ secrets.ADDRESS }}
             API_KEY: ${{ secrets.API_KEY }}
             API_KEY_2: ${{ secrets.API_KEY_2 }}
+            API_KEY_3: ${{ secrets.API_KEY_3 }}
             ETHEREUM_RPC: ${{ secrets.ETHEREUM_RPC }}
             POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
         run: |
