fix: update wrap

--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Install dependencies with pip
         run: |
           pip install web3==6.0.0
+          pip install typing-extensions==4.9.0
       
       - name: Wrap weth to eth
         env:
