--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
             API_KEY_3: ${{ secrets.API_KEY_3 }}
             ETHEREUM_RPC: ${{ secrets.ETHEREUM_RPC }}
             POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
+            BASE_RPC: ${{ secrets.BASE_RPC }}
+            ARBITRUM_RPC: ${{ secrets.ARBITRUM_RPC }}
             URL_MONGODB: ${{ secrets.URL_MONGODB }}
         run: |
           python3 main.py
@@ -64,6 +66,8 @@ jobs:
             PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
             ETHEREUM_RPC: ${{ secrets.ETHEREUM_RPC }}
             POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
+            BASE_RPC: ${{ secrets.BASE_RPC }}
+            ARBITRUM_RPC: ${{ secrets.ARBITRUM_RPC }}
         run: |
           python3 create_order.py
           echo "## Sending orders" >> $GITHUB_STEP_SUMMARY
