--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -1,7 +1,7 @@
 name: "Wrap weth to eth"
 on:
   schedule:
-  - cron: "*/60 */2 * * *"
+  - cron: "*/60 */${{ env.WRAP_TIME }} * * *"
   workflow_dispatch: {}
 
 jobs:
