--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -8,6 +8,7 @@ jobs:
   actions:
     runs-on: ubuntu-22.04
     permissions: write-all
+    timeout-minutes: 5
     steps:
       - name: "Check out the repo"
         uses: "actions/checkout@v4"
