--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -37,6 +37,6 @@ jobs:
             BASE_RPC: ${{ secrets.BASE_RPC }}
             ARBITRUM_RPC: ${{ secrets.ARBITRUM_RPC }}
         run: |
-          python3 wrap_weth_to_eth.py
+          python wrap_weth_to_eth.py
           echo "## Wraping weth" >> $GITHUB_STEP_SUMMARY
           echo "✅ Passed" >> $GITHUB_STEP_SUMMARY
