--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -1,7 +1,7 @@
 name: "Wrap weth to eth"
 on:
   schedule:
-  - cron: "*/60 */2 * * *"
+  - cron: "3 0,2,4,6,8,10,12,14,16,18,20,22 * * *"
   workflow_dispatch: {}
 
 jobs:
