--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
             POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
             BASE_RPC: ${{ secrets.BASE_RPC }}
             ARBITRUM_RPC: ${{ secrets.ARBITRUM_RPC }}
+            BLAST_RPC: ${{ secrets.BLAST_RPC }}
             URL_MONGODB: ${{ secrets.URL_MONGODB }}
             WORKER: ${{ vars.WORKER }}
         run: |
@@ -55,6 +56,7 @@ jobs:
             POLYGON_RPC: ${{ secrets.POLYGON_RPC }}
             BASE_RPC: ${{ secrets.BASE_RPC }}
             ARBITRUM_RPC: ${{ secrets.ARBITRUM_RPC }}
+            BLAST_RPC: ${{ secrets.BLAST_RPC }}
         run: |
           python create_order.py
           echo "## Sending orders" >> $GITHUB_STEP_SUMMARY
