--- a/.github/workflows/wrap.yml
+++ b/.github/workflows/wrap.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           pip install web3==6.0.0
           pip install typing-extensions==4.9.0
+          pip install eth-account==0.12.0
       
       - name: Wrap weth to eth
         env:
