--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,7 @@ jobs:
         id: get_messages
         env:
             ADDRESS: ${{ secrets.ADDRESS }}
+            PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
             API_KEY: ${{ secrets.API_KEY }}
             API_KEY_2: ${{ secrets.API_KEY_2 }}
             API_KEY_3: ${{ secrets.API_KEY_3 }}
@@ -44,6 +45,7 @@ jobs:
             BASE_RPC_2: ${{ secrets.BASE_RPC_2 }}
             ARBITRUM_RPC_2: ${{ secrets.ARBITRUM_RPC_2 }}
             BLAST_RPC_2: ${{ secrets.BLAST_RPC_2 }}
+            TENDERLY_ETH_NODE: ${{ secrets.TENDERLY_ETH_NODE }}
             URL_MONGODB: ${{ secrets.URL_MONGODB }}
             WORKER: ${{ vars.WORKER }}
         run: |
