feat: added zora and abstract chain, lot of fixes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,6 +43,8 @@ jobs:
             APECHAIN_RPC: ${{ secrets.APECHAIN_RPC }}
             BERACHAIN_RPC: ${{ secrets.BERACHAIN_RPC }}
             RONIN_RPC: ${{ secrets.RONIN_RPC }}
+            ZORA_RPC: ${{ secrets.ZORA_RPC }}
+            ABSTRACT_RPC: ${{ secrets.ABSTRACT_RPC }}
             ETHEREUM_RPC_2: ${{ secrets.ETHEREUM_RPC_2 }}
             POLYGON_RPC_2: ${{ secrets.POLYGON_RPC_2 }}
             BASE_RPC_2: ${{ secrets.BASE_RPC_2 }}
@@ -51,6 +53,8 @@ jobs:
             APECHAIN_RPC_2: ${{ secrets.APECHAIN_RPC_2 }}
             BERACHAIN_RPC_2: ${{ secrets.BERACHAIN_RPC_2 }}
             RONIN_RPC_2: ${{ secrets.RONIN_RPC_2 }}
+            ZORA_RPC_2: ${{ secrets.ZORA_RPC_2 }}
+            ABSTRACT_RPC_2: ${{ secrets.ABSTRACT_RPC_2 }}
             TENDERLY_ETH_NODE: ${{ secrets.TENDERLY_ETH_NODE }}
             URL_MONGODB: ${{ secrets.URL_MONGODB }}
             WORKER: ${{ vars.WORKER }}
@@ -73,6 +77,8 @@ jobs:
             APECHAIN_RPC: ${{ secrets.APECHAIN_RPC }}
             BERACHAIN_RPC: ${{ secrets.BERACHAIN_RPC }}
             RONIN_RPC: ${{ secrets.RONIN_RPC }}
+            ZORA_RPC: ${{ secrets.ZORA_RPC }}
+            ABSTRACT_RPC: ${{ secrets.ABSTRACT_RPC }}
             ETHEREUM_RPC_2: ${{ secrets.ETHEREUM_RPC_2 }}
             POLYGON_RPC_2: ${{ secrets.POLYGON_RPC_2 }}
             BASE_RPC_2: ${{ secrets.BASE_RPC_2 }}
@@ -81,6 +87,8 @@ jobs:
             APECHAIN_RPC_2: ${{ secrets.APECHAIN_RPC_2 }}
             BERACHAIN_RPC_2: ${{ secrets.BERACHAIN_RPC_2 }}
             RONIN_RPC_2: ${{ secrets.RONIN_RPC_2 }}
+            ZORA_RPC_2: ${{ secrets.ZORA_RPC_2 }}
+            ABSTRACT_RPC_2: ${{ secrets.ABSTRACT_RPC_2 }}
             URL_MONGODB: ${{ secrets.URL_MONGODB }}
             WORKER: ${{ vars.WORKER }}
         run: |
